# DynamicTriad

./: README.md  build.sh  index.html  requirements.txt
blog/: blog.md
core/: __init__.py  mygraph_utils.py  utils.py  utils_py.py
core/algorithm/: CMakeLists.txt  Makefile  dynamic_triad.py  dynamic_triad_cimpl.cpp
core/algorithm/cython_src/: dynamic_triad_cy.pyx
core/algorithm/samplers/: pos_neg_tri.py
core/cython_src/: README.txt  utils_cy.cpp  utils_cy.pyx
core/dataset/: adjlist.py  citation.py  dataset_utils.py  general.py
core/graph/: CMakeLists.txt  exception.h  nodemap.h  nodeset.h
data/: academic_toy.pickle
docs/: README.md  blog.md
docs/_layouts/: default.html
scripts/: demo.sh  demo_raw.sh  stdtests.py
